--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "prettier": "^2.8.4",
     "tailwindcss": "^3.3.4",
     "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+    "vite-plugin-rewrite-all": "^1.0.2"
   }
 }
