--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "^1.9.3",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.2",
     "axios": "^1.4.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
@@ -26,6 +28,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.17.0",
     "react-toastify": "^9.1.3",
+    "stripe": "^14.10.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
