--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.17.0",
     "react-toastify": "^9.1.3",
