--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "npm run dev && npm run build",
     "dev": "vite --port 3000",
     "build": "tsc && vite build",
     "preview": "vite preview",
@@ -30,6 +31,7 @@
     "react-router-dom": "^6.17.0",
     "react-toastify": "^9.1.3",
     "stripe": "^14.10.0",
+    "vercel": "^33.2.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
