--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,11 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended"
   ],
-
+  "settings": {
+    "react": {
+      "version": "detect" 
+    }
+  },
   "overrides": [],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
